--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -15,6 +15,7 @@
         [routerLink]="item.link"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
+        (click)="hideSidebar()"
       >
         <i [class]="item.icon"></i> {{ item.label }}
       </a>
