--- a/src/app/pages/create-position/create-position.component.html
+++ b/src/app/pages/create-position/create-position.component.html
@@ -25,6 +25,7 @@
       class="form-control"
       id="inputDate"
       formControlName="fechaEntregaInicio"
+      min="{{ today() | date : 'yyyy-MM-dd' }}"
     />
   </div>
   <div class="col-md-6">
