--- a/src/app/pages/list-positions/list-positions.component.html
+++ b/src/app/pages/list-positions/list-positions.component.html
@@ -1,4 +1,6 @@
 <h2 class="h2 mb-4">Listado de posiciones</h2>
+@if(positionsService.listPositions().length > 0 ||
+positionsService.listPositionsLoading()) {
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
@@ -21,4 +23,7 @@
     }
   </tbody>
 </table>
+} @else {
+<p class="text-center">No hay posiciones disponibles</p>
+}
 <app-loader [isLoading]="positionsService.listPositionsLoading()" />
